--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,6 +8,7 @@
     <title>Main Menu</title>
     <link rel="stylesheet" href="./css/bootstrap5.2.3.min.css">
     <script src="./js/bootstrap5.2.3.min.js"></script>
+    <script src="./js/app.js"></script>
 </head>
 
 <body>
