--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,16 +8,17 @@
     <title>Main Menu</title>
     <link rel="stylesheet" href="./css/bootstrap5.2.3.min.css">
     <script src="./js/bootstrap5.2.3.min.js"></script>
-    <script src="./js/app.js"></script>
 </head>
 
 <body>
-    <div class="form-control" style="margin: auto;max-width: 250px;">
-        <button class="form-control">Menu Item</button><br>
-        <button class="form-control">Menu Item</button><br>
-        <button class="form-control">Menu Item</button><br>
-        <button class="form-control">Menu Item</button><br>
+    <div class="form-control" style="text-align: center;margin: auto;max-width: 250px;margin-top: 25%;">
+        <h1>Main Menu</h1>
+        <button id="error" class="form-control btn btn-danger">Menu Item Error</button><br>
+        <button id="success" class="form-control btn btn-success">Menu Item Success</button><br>
+        <button id="info" class="form-control btn btn-info">Menu Item Info</button><br>
+        <button class="form-control btn btn-primary">Menu Item</button><br>
     </div>
 </body>
+<script src="./js/app.js"></script>
 
 </html>
